@@ -13,11 +13,12 @@
  */
 package com.facebook.presto.raptor;
 
+import com.facebook.presto.raptor.metadata.ColumnInfo;
 import com.facebook.presto.raptor.metadata.ForMetadata;
 import com.facebook.presto.raptor.metadata.MetadataDao;
 import com.facebook.presto.raptor.metadata.MetadataDaoUtils;
+import com.facebook.presto.raptor.metadata.ShardInfo;
 import com.facebook.presto.raptor.metadata.ShardManager;
-import com.facebook.presto.raptor.metadata.ShardNode;
 import com.facebook.presto.raptor.metadata.Table;
 import com.facebook.presto.raptor.metadata.TableColumn;
 import com.facebook.presto.raptor.metadata.ViewResult;
@@ -35,17 +36,14 @@ import com.facebook.presto.spi.SchemaTablePrefix;
 import com.facebook.presto.spi.ViewNotFoundException;
 import com.facebook.presto.spi.type.StandardTypes;
 import com.facebook.presto.spi.type.Type;
-import com.google.common.base.Optional;
-import com.google.common.base.Predicate;
-import com.google.common.base.Splitter;
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableListMultimap;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Multimaps;
+import io.airlift.json.JsonCodec;
+import io.airlift.slice.Slice;
 import org.skife.jdbi.v2.Handle;
 import org.skife.jdbi.v2.IDBI;
-import org.skife.jdbi.v2.TransactionCallback;
 import org.skife.jdbi.v2.TransactionStatus;
 import org.skife.jdbi.v2.VoidTransactionCallback;
 import org.skife.jdbi.v2.exceptions.UnableToExecuteStatementException;
@@ -54,22 +52,25 @@ import javax.annotation.Nullable;
 import javax.inject.Inject;
 
 import java.util.Collection;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.UUID;
-import java.util.concurrent.Callable;
+import java.util.Optional;
+import java.util.function.Predicate;
 
 import static com.facebook.presto.raptor.RaptorColumnHandle.SAMPLE_WEIGHT_COLUMN_NAME;
+import static com.facebook.presto.raptor.RaptorErrorCode.RAPTOR_ERROR;
 import static com.facebook.presto.raptor.metadata.MetadataDaoUtils.createMetadataTablesWithRetry;
 import static com.facebook.presto.raptor.metadata.SqlUtils.runIgnoringConstraintViolation;
 import static com.facebook.presto.raptor.util.Types.checkType;
 import static com.facebook.presto.spi.StandardErrorCode.ALREADY_EXISTS;
+import static com.facebook.presto.spi.StandardErrorCode.NOT_FOUND;
+import static com.facebook.presto.spi.block.SortOrder.ASC_NULLS_FIRST;
 import static com.facebook.presto.spi.type.BigintType.BIGINT;
 import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.base.Preconditions.checkNotNull;
-import static com.google.common.base.Preconditions.checkState;
-import static com.google.common.base.Predicates.not;
+import static java.lang.String.format;
+import static java.util.Collections.nCopies;
+import static java.util.stream.Collectors.toList;
 
 public class RaptorMetadata
         implements ConnectorMetadata
@@ -77,10 +78,11 @@ public class RaptorMetadata
     private final IDBI dbi;
     private final MetadataDao dao;
     private final ShardManager shardManager;
+    private final JsonCodec<ShardInfo> shardInfoCodec;
     private final String connectorId;
 
     @Inject
-    public RaptorMetadata(RaptorConnectorId connectorId, @ForMetadata IDBI dbi, ShardManager shardManager)
+    public RaptorMetadata(RaptorConnectorId connectorId, @ForMetadata IDBI dbi, ShardManager shardManager, JsonCodec<ShardInfo> shardInfoCodec)
     {
         checkNotNull(connectorId, "connectorId is null");
 
@@ -88,6 +90,7 @@ public class RaptorMetadata
         this.dbi = checkNotNull(dbi, "dbi is null");
         this.dao = dbi.onDemand(MetadataDao.class);
         this.shardManager = checkNotNull(shardManager, "shardManager is null");
+        this.shardInfoCodec = checkNotNull(shardInfoCodec, "shardInfoCodec is null");
 
         createMetadataTablesWithRetry(dao);
     }
@@ -139,14 +142,15 @@ public class RaptorMetadata
     @Override
     public ConnectorTableMetadata getTableMetadata(ConnectorTableHandle tableHandle)
     {
-        RaptorTableHandle raptorTableHandle = checkType(tableHandle, RaptorTableHandle.class, "tableHandle");
-        SchemaTableName tableName = new SchemaTableName(raptorTableHandle.getSchemaName(), raptorTableHandle.getTableName());
-        List<ColumnMetadata> columns = FluentIterable
-                .from(dao.getTableColumns(raptorTableHandle.getTableId()))
-                .transform(TableColumn.columnMetadataGetter())
-                .filter(not(isSampleWeightColumn()))
-                .toList();
-        checkArgument(!columns.isEmpty(), "Table %s does not have any columns", tableName);
+        RaptorTableHandle handle = checkType(tableHandle, RaptorTableHandle.class, "tableHandle");
+        SchemaTableName tableName = new SchemaTableName(handle.getSchemaName(), handle.getTableName());
+        List<ColumnMetadata> columns = dao.getTableColumns(handle.getTableId()).stream()
+                .map(TableColumn::toColumnMetadata)
+                .filter(isSampleWeightColumn().negate())
+                .collect(toList());
+        if (columns.isEmpty()) {
+            throw new PrestoException(RAPTOR_ERROR, "Table does not have any columns: " + tableName);
+        }
         return new ConnectorTableMetadata(tableName, columns);
     }
 
@@ -189,7 +193,9 @@ public class RaptorMetadata
         long columnId = checkType(columnHandle, RaptorColumnHandle.class, "columnHandle").getColumnId();
 
         TableColumn tableColumn = dao.getTableColumn(tableId, columnId);
-        checkState(tableColumn != null, "no column with id %s exists", columnId);
+        if (tableColumn == null) {
+            throw new PrestoException(NOT_FOUND, format("Column ID %s does not exist for table ID %s", columnId, tableId));
+        }
         return tableColumn.toColumnMetadata();
     }
 
@@ -210,38 +216,27 @@ public class RaptorMetadata
     }
 
     @Override
-    public ConnectorTableHandle createTable(ConnectorSession session, final ConnectorTableMetadata tableMetadata)
+    public ConnectorTableHandle createTable(ConnectorSession session, ConnectorTableMetadata tableMetadata)
     {
-        Long tableId = dbi.inTransaction(new TransactionCallback<Long>()
-        {
-            @Override
-            public Long inTransaction(final Handle handle, TransactionStatus status)
-                    throws Exception
-            {
-                // Ignore exception if table already exists
-                return runIgnoringConstraintViolation(new Callable<Long>()
-                {
-                    @Override
-                    public Long call()
-                            throws Exception
-                    {
-                        MetadataDao dao = handle.attach(MetadataDao.class);
-                        long tableId = dao.insertTable(connectorId, tableMetadata.getTable().getSchemaName(), tableMetadata.getTable().getTableName());
-                        int ordinalPosition = 0;
-                        for (ColumnMetadata column : tableMetadata.getColumns()) {
-                            long columnId = ordinalPosition + 1;
-                            dao.insertColumn(tableId, columnId, column.getName(), ordinalPosition, column.getType().getTypeSignature().toString());
-                            ordinalPosition++;
-                        }
-                        if (tableMetadata.isSampled()) {
-                            dao.insertColumn(tableId, ordinalPosition + 1, SAMPLE_WEIGHT_COLUMN_NAME, ordinalPosition, StandardTypes.BIGINT);
-                        }
-                        return tableId;
-                    }
-                }, null);
+        Long newTableId = dbi.inTransaction((handle, status) -> runIgnoringConstraintViolation(() -> {
+            MetadataDao dao = handle.attach(MetadataDao.class);
+            long tableId = dao.insertTable(connectorId, tableMetadata.getTable().getSchemaName(), tableMetadata.getTable().getTableName());
+            int ordinalPosition = 0;
+            for (ColumnMetadata column : tableMetadata.getColumns()) {
+                long columnId = ordinalPosition + 1;
+                dao.insertColumn(tableId, columnId, column.getName(), ordinalPosition, column.getType().getTypeSignature().toString());
+                ordinalPosition++;
             }
-        });
-        checkState(tableId != null, "table %s already exists", tableMetadata.getTable());
+            if (tableMetadata.isSampled()) {
+                dao.insertColumn(tableId, ordinalPosition + 1, SAMPLE_WEIGHT_COLUMN_NAME, ordinalPosition, StandardTypes.BIGINT);
+            }
+            return tableId;
+        }));
+
+        if (newTableId == null) {
+            throw new PrestoException(ALREADY_EXISTS, "Table already exists: " + tableMetadata.getTable());
+        }
+
         RaptorColumnHandle sampleWeightColumnHandle = null;
         if (tableMetadata.isSampled()) {
             sampleWeightColumnHandle = new RaptorColumnHandle(connectorId, SAMPLE_WEIGHT_COLUMN_NAME, tableMetadata.getColumns().size() + 1, BIGINT);
@@ -251,7 +246,7 @@ public class RaptorMetadata
                 connectorId,
                 tableMetadata.getTable().getSchemaName(),
                 tableMetadata.getTable().getTableName(),
-                tableId,
+                newTableId,
                 sampleWeightColumnHandle);
     }
 
@@ -311,31 +306,32 @@ public class RaptorMetadata
                 tableMetadata.getTable().getTableName(),
                 columnHandles.build(),
                 columnTypes.build(),
-                sampleWeightColumnHandle);
+                sampleWeightColumnHandle,
+                ImmutableList.of(),
+                ImmutableList.of());
     }
 
     @Override
-    public void commitCreateTable(ConnectorOutputTableHandle outputTableHandle, Collection<String> fragments)
+    public void commitCreateTable(ConnectorOutputTableHandle outputTableHandle, Collection<Slice> fragments)
     {
-        final RaptorOutputTableHandle table = checkType(outputTableHandle, RaptorOutputTableHandle.class, "outputTableHandle");
+        RaptorOutputTableHandle table = checkType(outputTableHandle, RaptorOutputTableHandle.class, "outputTableHandle");
 
-        long tableId = dbi.inTransaction(new TransactionCallback<Long>()
-        {
-            @Override
-            public Long inTransaction(Handle dbiHandle, TransactionStatus status)
-            {
-                MetadataDao dao = dbiHandle.attach(MetadataDao.class);
-                long tableId = dao.insertTable(connectorId, table.getSchemaName(), table.getTableName());
-                for (int i = 0; i < table.getColumnTypes().size(); i++) {
-                    RaptorColumnHandle column = table.getColumnHandles().get(i);
-                    Type columnType = table.getColumnTypes().get(i);
-                    dao.insertColumn(tableId, i + 1, column.getColumnName(), i, columnType.getTypeSignature().toString());
-                }
-                return tableId;
+        long newTableId = dbi.inTransaction((dbiHandle, status) -> {
+            MetadataDao dao = dbiHandle.attach(MetadataDao.class);
+            long tableId = dao.insertTable(connectorId, table.getSchemaName(), table.getTableName());
+            for (int i = 0; i < table.getColumnTypes().size(); i++) {
+                RaptorColumnHandle column = table.getColumnHandles().get(i);
+                Type columnType = table.getColumnTypes().get(i);
+                dao.insertColumn(tableId, i + 1, column.getColumnName(), i, columnType.getTypeSignature().toString());
             }
+            return tableId;
         });
 
-        shardManager.commitTable(tableId, parseFragments(fragments), Optional.<String>absent());
+        List<ColumnInfo> columns = table.getColumnHandles().stream().map(ColumnInfo::fromHandle).collect(toList());
+
+        // TODO: refactor this to avoid creating an empty table on failure
+        shardManager.createTable(newTableId, columns);
+        shardManager.commitShards(newTableId, columns, parseFragments(fragments), Optional.empty());
     }
 
     @Override
@@ -351,18 +347,35 @@ public class RaptorMetadata
         }
 
         String externalBatchId = session.getProperties().get("external_batch_id");
+        List<RaptorColumnHandle> sortColumnHandles = getSortColumnHandles(tableId);
+        return new RaptorInsertTableHandle(connectorId,
+                tableId,
+                columnHandles.build(),
+                columnTypes.build(),
+                externalBatchId,
+                sortColumnHandles,
+                nCopies(sortColumnHandles.size(), ASC_NULLS_FIRST));
+    }
 
-        return new RaptorInsertTableHandle(connectorId, tableId, columnHandles.build(), columnTypes.build(), externalBatchId);
+    private List<RaptorColumnHandle> getSortColumnHandles(long tableId)
+    {
+        ImmutableList.Builder<RaptorColumnHandle> builder = ImmutableList.builder();
+        for (TableColumn tableColumn : dao.listSortColumns(tableId)) {
+            checkArgument(!tableColumn.getColumnName().equals(SAMPLE_WEIGHT_COLUMN_NAME), "sample weight column may not be a sort column");
+            builder.add(getRaptorColumnHandle(tableColumn));
+        }
+        return builder.build();
     }
 
     @Override
-    public void commitInsert(ConnectorInsertTableHandle insertHandle, Collection<String> fragments)
+    public void commitInsert(ConnectorInsertTableHandle insertHandle, Collection<Slice> fragments)
     {
         RaptorInsertTableHandle handle = checkType(insertHandle, RaptorInsertTableHandle.class, "insertHandle");
         long tableId = handle.getTableId();
-        Optional<String> externalBatchId = Optional.fromNullable(handle.getExternalBatchId());
+        Optional<String> externalBatchId = Optional.ofNullable(handle.getExternalBatchId());
+        List<ColumnInfo> columns = handle.getColumnHandles().stream().map(ColumnInfo::fromHandle).collect(toList());
 
-        shardManager.commitTable(tableId, parseFragments(fragments), externalBatchId);
+        shardManager.commitShards(tableId, columns, parseFragments(fragments), externalBatchId);
     }
 
     @Override
@@ -432,27 +445,15 @@ public class RaptorMetadata
         return new RaptorColumnHandle(connectorId, tableColumn.getColumnName(), tableColumn.getColumnId(), tableColumn.getDataType());
     }
 
-    private static List<ShardNode> parseFragments(Collection<String> fragments)
+    private Collection<ShardInfo> parseFragments(Collection<Slice> fragments)
     {
-        ImmutableList.Builder<ShardNode> shards = ImmutableList.builder();
-        for (String fragment : fragments) {
-            Iterator<String> split = Splitter.on(':').split(fragment).iterator();
-            String nodeId = split.next();
-            UUID shardUuid = UUID.fromString(split.next());
-            shards.add(new ShardNode(shardUuid, nodeId));
-        }
-        return shards.build();
+        return fragments.stream()
+                .map(fragment -> shardInfoCodec.fromJson(fragment.getBytes()))
+                .collect(toList());
     }
 
     private static Predicate<ColumnMetadata> isSampleWeightColumn()
     {
-        return new Predicate<ColumnMetadata>()
-        {
-            @Override
-            public boolean apply(ColumnMetadata input)
-            {
-                return input.getName().equals(SAMPLE_WEIGHT_COLUMN_NAME);
-            }
-        };
+        return input -> input.getName().equals(SAMPLE_WEIGHT_COLUMN_NAME);
     }
 }
