@@ -19,15 +19,16 @@ import com.facebook.presto.spi.ConnectorPageSource;
 import com.facebook.presto.spi.ConnectorPageSourceProvider;
 import com.facebook.presto.spi.ConnectorSplit;
 import com.facebook.presto.spi.type.Type;
-import com.google.common.base.Function;
-import com.google.common.collect.FluentIterable;
-import com.google.inject.Inject;
+
+import javax.inject.Inject;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.function.Function;
 
 import static com.facebook.presto.raptor.util.Types.checkType;
 import static com.google.common.base.Preconditions.checkNotNull;
+import static java.util.stream.Collectors.toList;
 
 public class RaptorPageSourceProvider
         implements ConnectorPageSourceProvider
@@ -46,46 +47,15 @@ public class RaptorPageSourceProvider
         RaptorSplit raptorSplit = checkType(split, RaptorSplit.class, "split");
 
         UUID shardUuid = raptorSplit.getShardUuid();
-        List<RaptorColumnHandle> columnHandles = FluentIterable.from(columns).transform(toRaptorColumnHandle()).toList();
-        List<Long> columnIds = FluentIterable.from(columnHandles).transform(raptorColumnId()).toList();
-        List<Type> columnTypes = FluentIterable.from(columnHandles).transform(raptorColumnType()).toList();
+        List<RaptorColumnHandle> columnHandles = columns.stream().map(toRaptorColumnHandle()).collect(toList());
+        List<Long> columnIds = columnHandles.stream().map(RaptorColumnHandle::getColumnId).collect(toList());
+        List<Type> columnTypes = columnHandles.stream().map(RaptorColumnHandle::getColumnType).collect(toList());
 
         return storageManager.getPageSource(shardUuid, columnIds, columnTypes, raptorSplit.getEffectivePredicate());
     }
 
     private static Function<ConnectorColumnHandle, RaptorColumnHandle> toRaptorColumnHandle()
     {
-        return new Function<ConnectorColumnHandle, RaptorColumnHandle>()
-        {
-            @Override
-            public RaptorColumnHandle apply(ConnectorColumnHandle handle)
-            {
-                return checkType(handle, RaptorColumnHandle.class, "columnHandle");
-            }
-        };
-    }
-
-    private static Function<RaptorColumnHandle, Long> raptorColumnId()
-    {
-        return new Function<RaptorColumnHandle, Long>()
-        {
-            @Override
-            public Long apply(RaptorColumnHandle handle)
-            {
-                return handle.getColumnId();
-            }
-        };
-    }
-
-    private static Function<RaptorColumnHandle, Type> raptorColumnType()
-    {
-        return new Function<RaptorColumnHandle, Type>()
-        {
-            @Override
-            public Type apply(RaptorColumnHandle handle)
-            {
-                return handle.getColumnType();
-            }
-        };
+        return handle -> checkType(handle, RaptorColumnHandle.class, "columnHandle");
     }
 }
